--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-craft-demo",
+  "name": "sharkbits-builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,11 +33,16 @@
     "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
